# grpc_mqtt_temperature

./: .gitignore  README.md  grpc_temp.code-workspace  pyproject.toml  requirements-dev.txt
config/: settings.yaml
doc/readme/: readme_source.md
scripts/: build_docs.sh  try_mqtt_connect.py
scripts/podman/: env_vars.sh  start_dev_env.sh  stop_dev_env.sh
scripts/podman/mosquitto/config/: mosquitto.conf
src/grpc_temp/: __main__.py  cli.py  config.py  server.py
src/grpc_temp/protos/: temperature_pb2.py  temperature_pb2_grpc.py
src/test/: test_config.py
