[build-system]
requires = ["wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = "grpc_temp"
version = "0.1.0"
authors = [
    {name = "Michael Penhallegon", email = "mike@hematite.tech"}
]
requires-python = ">=3.11"

[options.extras_require]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "ipython",
    "ipdb"
]

[options.packages.find]
where = "src"

[tools.pytest]
testpaths = ["test"]

[tool.ruff]
line-length = 120
exclude = ["src/grpc_temp/protos/*"]